# aobook-haiku

./: COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aobook.rdef  config.h.in  configure  configure.ac
desktop/: Makefile.am  Makefile.in  aobook.desktop  aobook.iom
doc/: manual.html
mlib/: Makefile.am  Makefile.haiku  Makefile.in
mlib/include/: mAccelerator.h  mAppDef.h  mArrowButton.h  mBufOperate.h  mButton.h  mCheckButton.h  mClipboard.h  mColorButton.h  mColorConv.h  mColorPreview.h  mComboBox.h  mConfig.h  mContainer.h  mContainerDef.h  mCursor.h  mDef.h  mDefGui.h  mDialog.h  mDirEntry.h  mEnumFont.h  mEvent.h  mFTGSUB.h  (+66 more)
src/: Makefile.am  Makefile.haiku  Makefile.in  appicon.h  bookmarkdat.c  bookmarkdat.h  bookmarkwin.c  bookmarkwin.h  captiondlg.c  deftrans.h  envoptdlg.c  envoptdlg.h  envoptdlg_key.c  envoptdlg_mouse.c  envoptdlg_opt.c  envoptdlg_pv.h  envoptdlg_tool.c  filedialog.c  globaldata.c  globaldata.h  main.c  mainfunc.c  mainfunc.h  mainwindow.c  mainwindow.h  menudat.h  style.c  style.h  stylelist.c  stylelist.h  styleoptdlg.c  styleoptdlg_basic.c  styleoptdlg_char.c  styleoptdlg_font.c  styleoptdlg_pv.h  trgroup.h  trid.h  trid_menu.h  unzip.c
src/haiku/: BookmarkWindow.cpp  BookmarkWindow.h  ColorButton.cpp  ColorButton.h  EnvOptDialog.cpp  EnvOptDialog.h  FileChooser.cpp  FileChooser.h  FontButton.cpp  FontButton.h  HeadingDialog.cpp  HeadingDialog.h  StyleOptDialog.cpp  StyleOptDialog.h  app.cpp  app.h  common.h  dialogs.cpp  dialogs.h  func.cpp  func.h  keys.cpp  keys.h  version.h  window.cpp  window.h
src/locales/: en.catkeys  ja.catkeys
src/sub/: _aobufdef.h  _aolayout.h  _aotextconv.h  aoFont.c  aoFont.h  aoLayout.c  aoLayout.h  aoLayout_draw.c  aoLayout_line.c  aoLayout_main.c  aoLayout_sub.c  aoStyle.h  aoText.h  aoTextConv.c  aoTextConv_sub.c  aoTextLoad.c
translation/: ja  ja.mtr  mtrconv.c
(+128 files in other folders)
